- WHYYYYY IS SALAD DRESSING NOT WORKING IN MEALS??????????????????????
- use the new 'NutritionPropertiesPerLitreInMeal' stuff
- Healing over time implemented for all items
- Soulstorm Brew makes you psychedelic now?
- Items can go into crocks? New labels for everything?
- Pickled cabbage transform reviewed
- Aged spirit/cider text and visuals revised and updated



2.0.0-dev.7

REBALANCING:
- Peanuts now receive +50% nutrition when in meals (seems like it not doing so in vanilla is an oversight)
- All simmering recipe meltingDurations changed
-- All recipes with a meltingDuration of 450 seconds cut to 48
-- All recipes with a meltingDuration of 110 seconds cut to 24
-- All recipes with a meltingDuration of 100 seconds cut to 10
-- All recipes with a meltingDuration cut from 150 seconds to 30
-- Yogurt simmering meltingDuration cut from 60 seconds to 12
- Tree syrup cannot be drunk

BUG FIXES:
- Apple syrup textures working in fruit bread/muffins
- Mash textures in troughs fixed (thanks to Whiskey Sunshine)
- Clarified broth gives correct expanded nutrients
- Part-baked vegetables now expire properly

NEW FOOD:
- Dried pasta added (thanks to Origami!)

MISC: 
- Food oil recipes compressed; Superfuel compatibility updated (thanks to Whiskey Sunshine!)
- Superfuel compatibility removed in favor of Superfuel Resumed

2.0.0-dev.6

HANDBOOK THINGS:
- Sap collecting info moved from handbook guide to spile and sap entries
- Vanilla dough grouped in handbook
- Handbook entries added for almost every item and food
- Text added to vanilla entries for cider/spirits to explain EF aging
- Text added to vanilla dough to explain EF expansions

REBALANCING:
- Cheese in meal patched removed; now handled in vanilla
- Cottage cheese patch adding "nutritionPropsWhenInMeal" removed
- Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven
- Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45