@@ -5,7 +5,7 @@
     "path": "/0/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/firelog.json",
@@ -13,7 +13,7 @@
     "path": "/1/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/firelog.json",
@@ -21,7 +21,7 @@
     "path": "/2/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/bowlpeat.json",
@@ -29,7 +29,7 @@
     "path": "/0/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/oillamp.json",
@@ -37,7 +37,7 @@
     "path": "/0/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
@@ -45,7 +45,7 @@
     "path": "/0/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
@@ -53,7 +53,7 @@
     "path": "/1/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
@@ -61,7 +61,7 @@
     "path": "/2/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
@@ -69,7 +69,7 @@
     "path": "/3/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
@@ -77,7 +77,7 @@
     "path": "/4/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  },
  {
     "file": "expandedfoods:recipes/grid/superfuel/oilcandle.json",
@@ -85,6 +85,6 @@
     "path": "/5/enabled", 
     "value": "false",
     "side": "server",
-    "dependsOn": [{ "modid": "superfuel", "invert":  true }]
+    "dependsOn": [{ "modid": "superfuelresumed", "invert":  true }]
  }
 ]
