@@ -1,7 +1,7 @@
 {
   "type": "content",
   "name": "Expanded Foods",
-  "version": "2.0.0-dev.7",
+  "version": "2.0.0-dev.8",
   "networkVersion": null,
   "description": "New recipes for existing food types.",
   "modID": "expandedfoods",
