@@ -131,6 +131,7 @@ MISC:
 - Items can go into crocks? New labels for everything?
 - Pickled cabbage transform reviewed
 - Aged spirit/cider text and visuals revised and updated
+- Superfuels Resumed compatibility actually works now - DONE!!!
 
 
 
